--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "api:dev": "nest start --debug --watch",
     "api:prod": "node dist/apps/drivebase/main",
     "api:build": "nest build",
-    "web:dev": "cd web && vite",
-    "web:build": "cd web && vite build",
+    "web:dev": "cd web && npm run dev",
+    "web:build": "cd web && npm run build",
     "dev": "concurrently \"npm run api:dev\" \"npm run web:dev\"",
     "build": "concurrently \"npm run api:build\" \"npm run web:build\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -29,10 +29,8 @@
     "codegen:watch": "graphql-codegen --config codegen.ts --watch"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.5",
     "@apollo/server": "^4.11.3",
     "@aws-sdk/client-s3": "^3.772.0",
-    "@hookform/resolvers": "^4.1.3",
     "@nestjs/apollo": "^13.0.4",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^4.0.2",
@@ -43,59 +41,26 @@
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^11.1.0",
     "@nestjs/typeorm": "^11.0.0",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-context-menu": "^2.2.6",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@tanstack/react-router": "^1.114.27",
-    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "byte-size": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
-    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.5.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
-    "graphql": "^16.10.0",
     "graphql-type-json": "^0.3.2",
-    "i18next": "^24.2.3",
-    "i18next-browser-languagedetector": "^8.0.4",
-    "i18next-http-backend": "^3.0.2",
     "iso-639-1": "^3.1.5",
-    "js-cookie": "^3.0.5",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.483.0",
     "nanoid": "^5.1.5",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.14.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-i18next": "^15.4.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.2",
     "telegram": "^2.26.22",
     "typeorm": "^0.3.21",
-    "uuid": "^11.1.0",
-    "zod": "^3.24.2",
-    "zustand": "^5.0.3"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.16",
