--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "ollama-ai-provider": "^1.2.0",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
+    "prisma": "^6.5.0",
     "release-it": "^18.1.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
