--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drivebase",
-  "version": "1.0.0-alpha.15",
+  "version": "1.0.0",
   "private": true,
   "workspaces": [
     "apps/*",
