--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,13 +4,13 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --port 3000",
-		"build": "vite build && tsc",
+		"build": "bun run codegen && vite build && tsc",
 		"preview": "vite preview",
 		"test": "vitest run",
 		"format": "biome format",
 		"lint": "biome lint",
 		"check": "biome check",
-		"codegen": "graphql-codegen"
+		"codegen": "bunx graphql-codegen"
 	},
 	"dependencies": {
 		"@base-ui-components/react": "^1.0.0-rc.0",
