--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "dev:local": "bun --env-file=.env.local turbo run dev --parallel --filter=@drivebase/api --filter=web",
     "release": "release-it"
   },
+  "overrides": {
+    "yaml": "2.7.0"
+  },
+  "resolutions": {
+    "yaml": "2.7.0"
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.3.14",
     "@release-it/conventional-changelog": "^10.0.5",
     "release-it": "^19.2.4",
-    "turbo": "^2.8.3"
+    "turbo": "^2.8.3",
+    "yaml": "2.7.0"
   },
   "packageManager": "bun@1.3.5"
 }
