--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -16,6 +16,7 @@
     "fumadocs-mdx": "14.2.7",
     "fumadocs-ui": "16.6.0",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
     "next": "16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
