--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,16 +15,17 @@
 	"dependencies": {
 		"@base-ui-components/react": "^1.0.0-rc.0",
 		"@base-ui/react": "^1.1.0",
-		"@radix-ui/react-checkbox": "^1.3.3",
 		"@drivebase/utils": "workspace:*",
 		"@fontsource-variable/geist": "^5.2.8",
 		"@hookform/resolvers": "^5.2.2",
+		"@next/third-parties": "^16.1.6",
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@remixicon/react": "^4.9.0",
 		"@tailwindcss/vite": "^4.0.6",
 		"@tanstack/react-devtools": "^0.7.0",
 		"@tanstack/react-router": "^1.132.0",
-		"@tanstack/react-table": "^8.21.3",
 		"@tanstack/react-router-devtools": "^1.132.0",
+		"@tanstack/react-table": "^8.21.3",
 		"@tanstack/router-plugin": "^1.132.0",
 		"axios": "^1.13.5",
 		"class-variance-authority": "^0.7.1",
