--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -11,7 +11,7 @@
     "lint": "biome check",
     "format": "biome format --write",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "deploy": "opennextjs-cloudflare deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
