--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@release-it/bumper": "^7.0.5",
 		"@release-it/conventional-changelog": "^10.0.5",
 		"husky": "^9.1.7",
+		"lint-staged": "^16.2.7",
 		"release-it": "^19.2.4",
 		"turbo": "^2.8.3",
 		"yaml": "2.7.0"
