--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,13 +18,10 @@
 		"@drivebase/utils": "workspace:*",
 		"@fontsource-variable/geist": "^5.2.8",
 		"@hookform/resolvers": "^5.2.2",
-		"@next/third-parties": "^16.1.6",
 		"@radix-ui/react-checkbox": "^1.3.3",
 		"@remixicon/react": "^4.9.0",
 		"@tailwindcss/vite": "^4.0.6",
-		"@tanstack/react-devtools": "^0.7.0",
 		"@tanstack/react-router": "^1.132.0",
-		"@tanstack/react-router-devtools": "^1.132.0",
 		"@tanstack/react-table": "^8.21.3",
 		"@tanstack/router-plugin": "^1.132.0",
 		"axios": "^1.13.5",
@@ -37,8 +34,6 @@
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.71.1",
-		"recharts": "^3.7.0",
-		"shadcn": "^3.8.4",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.0.6",
@@ -56,6 +51,8 @@
 		"@iconify-json/material-symbols": "^1.2.54",
 		"@iconify/tailwind4": "^1.2.1",
 		"@tanstack/devtools-vite": "^0.3.11",
+		"@tanstack/react-devtools": "^0.7.0",
+		"@tanstack/react-router-devtools": "^1.132.0",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.2.0",
 		"@types/node": "^22.10.2",
@@ -65,7 +62,6 @@
 		"jsdom": "^27.0.0",
 		"typescript": "^5.7.2",
 		"vite": "^7.1.7",
-		"vitest": "^3.0.5",
-		"web-vitals": "^5.1.0"
+		"vitest": "^3.0.5"
 	}
 }
