--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"graphql": "^16.12.0",
+		"graphql-sse": "^2.6.0",
 		"lucide-react": "^0.563.0",
 		"radix-ui": "^1.4.3",
 		"react": "^19.2.0",
