--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: Run Pull Request Tests
+name: Pull Request Checks
 
 on:
   pull_request:
@@ -7,12 +7,13 @@ on:
       - '**/*.js'
 
 jobs:
-  test:
+  checks:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
@@ -21,34 +22,102 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Run tests
-        id: test-run
+      - name: Lint
+        id: lint
         run: |
-          echo "::group::Test Results"
-          TEST_OUTPUT=$(NO_COLOR=1 bun test)
-          echo "$TEST_OUTPUT"
-          echo "::endgroup::"
-
-          # Save output for PR comment
+          if bunx biome check . 2>&1 | tee /tmp/lint-output.txt; then
+            echo "status=passed" >> $GITHUB_OUTPUT
+          else
+            echo "status=failed" >> $GITHUB_OUTPUT
+          fi
           echo "result<<EOF" >> $GITHUB_OUTPUT
-          echo "$TEST_OUTPUT" >> $GITHUB_OUTPUT
+          cat /tmp/lint-output.txt >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
         continue-on-error: true
 
-      - name: Post test results as PR comment
-        uses: actions/github-script@v6
+      - name: Type check
+        id: typecheck
+        run: |
+          if bunx tsc --noEmit 2>&1 | tee /tmp/typecheck-output.txt; then
+            echo "status=passed" >> $GITHUB_OUTPUT
+          else
+            echo "status=failed" >> $GITHUB_OUTPUT
+          fi
+          echo "result<<EOF" >> $GITHUB_OUTPUT
+          cat /tmp/typecheck-output.txt >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+        continue-on-error: true
+
+      - name: Run tests
+        id: test
+        run: |
+          if NO_COLOR=1 bun test 2>&1 | tee /tmp/test-output.txt; then
+            echo "status=passed" >> $GITHUB_OUTPUT
+          else
+            echo "status=failed" >> $GITHUB_OUTPUT
+          fi
+          echo "result<<EOF" >> $GITHUB_OUTPUT
+          cat /tmp/test-output.txt >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+        continue-on-error: true
+
+      - name: Post results as PR comment
+        uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const testResults = `### Test Results
-            \`\`\`
-            ${{ steps.test-run.outputs.result }}
-            \`\`\`
-            `;
+            const icon = (status) => status === 'passed' ? '✅' : '❌';
 
-            github.rest.issues.createComment({
+            const lint     = '${{ steps.lint.outputs.status }}';
+            const tc       = '${{ steps.typecheck.outputs.status }}';
+            const test     = '${{ steps.test.outputs.status }}';
+
+            const lintOut  = `${{ steps.lint.outputs.result }}`.trim();
+            const tcOut    = `${{ steps.typecheck.outputs.result }}`.trim();
+            const testOut  = `${{ steps.test.outputs.result }}`.trim();
+
+            const body = [
+              `## PR Checks`,
+              `| Check | Status |`,
+              `|-------|--------|`,
+              `| Lint | ${icon(lint)} ${lint} |`,
+              `| Type check | ${icon(tc)} ${tc} |`,
+              `| Tests | ${icon(test)} ${test} |`,
+              ``,
+              lintOut     ? `<details><summary>Lint output</summary>\n\n\`\`\`\n${lintOut}\n\`\`\`\n</details>` : '',
+              tcOut       ? `<details><summary>Type check output</summary>\n\n\`\`\`\n${tcOut}\n\`\`\`\n</details>` : '',
+              testOut     ? `<details><summary>Test output</summary>\n\n\`\`\`\n${testOut}\n\`\`\`\n</details>` : '',
+            ].filter(Boolean).join('\n');
+
+            const { data: comments } = await github.rest.issues.listComments({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: testResults
             });
+
+            const existing = comments.find(c =>
+              c.user.login === 'github-actions[bot]' && c.body.startsWith('## PR Checks')
+            );
+
+            if (existing) {
+              await github.rest.issues.updateComment({
+                comment_id: existing.id,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body,
+              });
+            } else {
+              await github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body,
+              });
+            }
+
+      - name: Fail if any check failed
+        if: |
+          steps.lint.outputs.status == 'failed' ||
+          steps.typecheck.outputs.status == 'failed' ||
+          steps.test.outputs.status == 'failed'
+        run: exit 1
