fix(files): enable pruneDeleted by default on provider sync and avoid contents reload on move-to-provider

--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,8 @@
 		"DEFAULT_OWNER_EMAIL",
 		"DEFAULT_OWNER_PASSWORD",
 		"VITE_PUBLIC_BASE_URL",
-		"AI_INFERENCE_URL"
+		"AI_INFERENCE_URL",
+		"DATA_DIR"
 	],
 	"tasks": {
 		"build": {
