--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ ENCRYPTION_KEY=your-encryption-key-minimum-32-characters-long-change-this-in-pro
 # Public base URL used by the web app (GraphQL path is appended automatically).
 VITE_PUBLIC_BASE_URL=http://localhost:4000
 
+# Writable data directory for transfer staging, instance ID, etc.
+DATA_DIR=./.drivebase/data
+
 # AI inference service (optional)
 AI_INFERENCE_URL=http://localhost:8010
 # AI_INFERENCE_TOKEN=
