--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,6 +10,11 @@ on:
       - '**/*.json'
       - 'bun.lock'
       - '.github/workflows/pr.yml'
+      -
+
+concurrency:
+  group: release
+  cancel-in-progress: false
 
 jobs:
   assign-reviewer:
