--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
 		"@lingui/react": "^5.9.1",
 		"@radix-ui/react-checkbox": "^1.3.3",
 		"@remixicon/react": "^4.9.0",
+		"@simplewebauthn/browser": "^13.2.2",
 		"@tailwindcss/vite": "^4.0.6",
 		"@tanstack/react-router": "^1.162.0",
 		"@tanstack/react-table": "^8.21.3",
@@ -61,6 +62,7 @@
 		"@graphql-typed-document-node/core": "^3.2.0",
 		"@iconify-json/cib": "^1.2.3",
 		"@iconify-json/material-symbols": "^1.2.54",
+		"@iconify-json/solar": "^1.2.5",
 		"@iconify/tailwind4": "^1.2.1",
 		"@lingui/cli": "^5.9.1",
 		"@lingui/format-json": "^5.9.1",
