--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.71.1",
+		"react-icons": "^5.5.0",
 		"shadcn": "^3.8.5",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
@@ -59,10 +60,6 @@
 		"@graphql-codegen/cli": "^6.1.1",
 		"@graphql-codegen/client-preset": "^5.2.2",
 		"@graphql-typed-document-node/core": "^3.2.0",
-		"@iconify-json/cib": "^1.2.3",
-		"@iconify-json/material-symbols": "^1.2.54",
-		"@iconify-json/solar": "^1.2.5",
-		"@iconify/tailwind4": "^1.2.1",
 		"@lingui/cli": "^5.9.1",
 		"@lingui/format-json": "^5.9.1",
 		"@lingui/macro": "^5.9.1",
